Java 21 modernization