@@ -36,22 +36,10 @@ import net.kyori.adventure.text.Component;
 
 /**
  * Implements the {@code /leavequeue} command.
+ *
+ * @param server The Velocity server instance used for accessing queue data and player state.
  */
-public class LeaveQueueCommand {
-
-  /**
-   * The Velocity server instance used for accessing queue data and player state.
-   */
-  private final VelocityServer server;
-
-  /**
-   * Constructs a new {@link LeaveQueueCommand} instance.
-   *
-   * @param server the Velocity server instance
-   */
-  public LeaveQueueCommand(final VelocityServer server) {
-    this.server = server;
-  }
+public record LeaveQueueCommand(VelocityServer server) {
 
   /**
    * Registers or unregisters the command based on the configuration value.
@@ -69,7 +57,7 @@ public class LeaveQueueCommand {
       return;
     }
 
-    final LiteralArgumentBuilder<CommandSource> rootNode = BrigadierCommand.literalArgumentBuilder(aliases.remove(0))
+    final LiteralArgumentBuilder<CommandSource> rootNode = BrigadierCommand.literalArgumentBuilder(aliases.removeFirst())
         .requires(source -> source.getPermissionValue("velocity.queue.leave") == Tristate.TRUE)
         .then(BrigadierCommand
             .requiredArgumentBuilder("server", StringArgumentType.word())
